<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AudioStoriesProject</string>
    <string name="play">play</string>
    <string name="snow_white_and_the_seven_dwarfs">Snow White and the Seven Dwarfs</string>
    <string name="read">Read</string>
    <string name="see_all_statistics">See All Statistics</string>
    <string name="king_midas">King Midas</string>
    <string name="Shoemaker">ShoeMaker</string>
    <string name="the_hare_and_the_tortoise">The hare and the Tortoise</string>
    <string name="posh_rat">Posh Rat</string>
    <string name="all_statistics">All statistics</string>
    <string name="most_favorite">Most favorite</string>
    <string name="less_favorite">Less favorite</string>
    <string name="cinderella">Cinderella</string>
    <string name="cinderella2">Cinderella</string>
    <string name="sign_in_new">Sign in</string>
    <string name="visitor_new">Visitor</string>
    <string name="password_new">" Password"</string>
    <string name="email_new">" Email"</string>
    <string name="audio_story_title_new">Title</string>
    <string name="author_new">Author</string>
    <string name="release_year_new">Release Year</string>
    <string name="previous_new">Previous</string>
    <string name="next_new">Next</string>
    <string name="stop_new">Stop</string>
    <string name="go_to_library_new">Go to Library</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="go_to_library">Go to Library</string>
    <string name="stop">Stop</string>
    <string name="previous">Previous</string>
    <string name="release_year">Release Year</string>
    <string name="author">Author</string>
    <string name="audio_story_title">Title</string>
    <string name="sign_in">Sign in</string>
    <string name="speak_command">Speak</string>
    <string name="new_user_click_here_new2">New User--Click Here</string>
    <string name="unipi_audio_stories">Unipi Audio Stories</string>
    <string name="loggedinuser_gmail_com">loggedInUser@gmail.com</string>
    <string name="home">Home</string>
    <string name="library_language">Library Language</string>
    <string name="about">About</string>
    <string name="contact_form">Contact Form</string>
    <string name="logout">Logout</string>
    <string name="return_to_library">Return To Library</string>
    <string name="copyright_2024_stergios_toulioudas_amp_georgios_simos"><![CDATA[Copyright © 2024 Stergios Toulioudas & Georgios Simos]]></string>
    <string name="the_android_app_quot_unipi_audio_stories_quot_was_developed_as_part_of_a_university_project_for_the_course_of_software_enigineering_for_mobile_devices_it_offers_a_collection_of_engaging_audio_stories_tailored_for_children_the_app_is_designed_to_provide_children_with_a_delightful_and_educational_experience_through_audio_storytelling_it_offers_a_curated_selection_of_age_appropriate_stories_ranging_from_classic_fairy_tales_to_modern_adventures_upon_launching_the_app_children_are_greeted_with_a_colorful_and_intuitive_interface_designed_to_capture_their_attention_and_spark_their_imagination_the_home_screen_presents_a_variety_of_available_stories_allowing_young_listeners_to_explore_tales_based_on_their_interests_once_a_picture_of_a_story_is_selected_the_app_is_redirected_to_the_media_player_and_children_are_immersed_in_a_captivating_audio_narrative_accompanied_by_details_of_the_story_the_app_s_user_friendly_controls_enable_children_to_play_pause_and_navigate_between_previous_and_next_story_in_addition_to_its_diverse_library_of_stories_quot_unipi_audio_stories_quot_offers_a_statistics_panel_where_children_can_view_how_many_times_they_ve_heard_each_story_and_which_one_is_their_most_least_favorite">The Android app \"Unipi Audio Stories\" was developed as part of a university project for the course of software engineering for mobile devices. It offers a collection of engaging audio stories tailored for children. The app is designed to provide children with a delightful and educational experience through audio storytelling. It offers a curated selection of age-appropriate stories, ranging from classic fairy tales to modern adventures. Upon launching the app, children are greeted with a colorful and intuitive interface, designed to capture their attention and spark their imagination. The home screen presents a variety of available stories, allowing young listeners to explore tales based on their interests. Once a picture of a story is selected, the app is redirected to the media player and children are immersed in a captivating audio narrative, accompanied by details of the story. The app\'s user-friendly controls enable children to play, pause, and navigate between previous and next story. In addition to its diverse library of stories, \"Unipi Audio Stories\" offers a statistics panel where children can view how many times they\'ve heard each story and which one is their most/least favorite.</string>
    <string name="return_to_library_from_contct">Return To Library</string>
    <string name="please_feel_free_to_contact_us_at_s_toulioudas_unipi_gr_g_simos_unipi_gr">Please feel free to contact us at: s_toulioudas@unipi.gr, g_simos@unipi.gr</string>
    <string name="app_version_1_0">App Version 1.0</string>
    <string name="please_enter_your_password">"  Please enter your password."</string>
    <string name="please_enter_your_email">"  Please enter your email"</string>
    <string name="welcome_to_unipi_audio_stories">Welcome to Unipi Audio Stories!</string>
    <string name="please_sign_up_to_begin">Please sign up to begin!</string>
    <string name="sign_up">Sign Up</string>
    <string name="unipi_audio_stories_from_toolbar">Unipi Audio Stories</string>
    <string name="media_player">Media Player</string>
    <string name="library">Library</string>
    <string name="statistics">Statistics</string>
    <string name="success_title">Success</string>
    <string name="success_signin_description">User signed in successfully!</string>
    <string name="error_title">Error</string>
    <string name="error_email_password_empty">Email and password cannot be empty.</string>
    <string name="error_email_empty">Email cannot be empty.</string>
    <string name="error_password_empty">Password cannot be empty.</string>
    <string name="success_signup_description">User profile created!</string>


</resources>