<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LibraryActivity">


    <ImageView
        android:id="@+id/imageViewSnowWhite"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:clickable="true"
        android:onClick="navigateMediaPlayer"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:srcCompat="@drawable/snow_white_rose_red" />


    <TextView
        android:id="@+id/textViewSnowWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/snow_white_and_the_seven_dwarfs"
        android:textColor="#673AB7"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintTop_toTopOf="@id/imageViewSnowWhite"
        app:layout_constraintBottom_toBottomOf="@id/imageViewSnowWhite"
        app:layout_constraintStart_toEndOf="@id/imageViewSnowWhite"
        android:layout_marginStart="15dp" />

    <TextView
        android:id="@+id/textViewMidas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/king_midas"
        android:textColor="#673AB7"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintTop_toTopOf="@id/imageViewMidas"
        app:layout_constraintBottom_toBottomOf="@id/imageViewMidas"
        app:layout_constraintStart_toEndOf="@id/imageViewMidas"
        android:layout_marginStart="15dp" />


    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="99dp"
        android:layout_height="62dp"
        android:clickable="true"
        android:onClick="viewStatistics"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/statistics" />

    <ImageView
        android:id="@+id/imageViewSettings"
        android:layout_width="54dp"
        android:layout_height="52dp"
        android:onClick="settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.016"
        app:srcCompat="@drawable/menu" />

    <ImageView
        android:id="@+id/imageViewMidas"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:onClick="navigateMediaPlayer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.328"
        app:srcCompat="@drawable/kingmidas" />

    <ImageView
        android:id="@+id/imageViewShoemaker"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:onClick="navigateMediaPlayer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.518"
        app:srcCompat="@drawable/elves_shoemaker" />

    <ImageView
        android:id="@+id/imageViewTortoise"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:onClick="navigateMediaPlayer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.713"
        app:srcCompat="@drawable/tortoise_and_rabbit" />

    <ImageView
        android:id="@+id/imageViewRat"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:onClick="navigateMediaPlayer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922"
        app:srcCompat="@drawable/poshrat" />

    <TextView
        android:id="@+id/textViewShoemaker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Shoemaker"
        android:onClick="navigateMediaPlayer"
        android:textColor="#009688"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintStart_toEndOf="@id/imageViewShoemaker"
        app:layout_constraintTop_toTopOf="@id/imageViewShoemaker"
        app:layout_constraintBottom_toBottomOf="@id/imageViewShoemaker"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.40"
        android:layout_marginStart="15dp" />


    <TextView
        android:id="@+id/textViewTortoise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/the_hare_and_the_tortoise"
        android:textColor="#2196F3"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintTop_toTopOf="@id/imageViewTortoise"
        app:layout_constraintBottom_toBottomOf="@id/imageViewTortoise"
        app:layout_constraintStart_toEndOf="@id/imageViewTortoise"
        android:layout_marginStart="15dp" />

    <TextView
        android:id="@+id/textViewRat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/posh_rat"
        android:textColor="#FF5722"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintTop_toTopOf="@id/imageViewRat"
        app:layout_constraintBottom_toBottomOf="@id/imageViewRat"
        app:layout_constraintStart_toEndOf="@id/imageViewRat"
        android:layout_marginStart="15dp"
    />


</androidx.constraintlayout.widget.ConstraintLayout>